Refactor of ArduinoDisplayDriver & Add TVout display driver
- ArduinoDisplayDriver becomes PCD8544DisplayDriver (Nokia 3310 screen)
- Add Driver for TVout (TVoutDisplayDriver)

--- a/arduino/TomBoy/platformio.ini
+++ b/arduino/TomBoy/platformio.ini
@@ -20,7 +20,16 @@
 [platformio]
 lib_dir = ../../shared
 
+[common_env_data]
+build_flags = -DBAUDRATE=9600 -DDEBUG
+
 [env:uno]
 platform = atmelavr
 framework = arduino
 board = uno
+
+; Build options
+build_flags = ${common_env_data.build_flags}
+
+; Serial Monitor options
+monitor_baud = 9600
