Add "Arduino Nano" board & Correct Pin for Screen in Fritzing schematics

--- a/arduino/TomBoy/platformio.ini
+++ b/arduino/TomBoy/platformio.ini
@@ -33,3 +33,14 @@ build_flags = ${common_env_data.build_flags}
 
 ; Serial Monitor options
 monitor_baud = 9600
+
+[env:nanoatmega328]
+platform = atmelavr
+board = nanoatmega328
+framework = arduino
+
+; Build options
+build_flags = ${common_env_data.build_flags}
+
+; Serial Monitor options
+monitor_baud = 9600
